istio/egress/client_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-client
  labels:
    istio-injection: enabled
