istio/egress/server_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-server
  labels:
    istio-injection: disabled
