istio/egress/egress_gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: grpc-server-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      name: grpc
      number: 50050
      protocol: GRPC
    hosts:
    - "grpc-server.internal"
